update branch